hphp/test/slow/attributes/atted_syntax/reified_generics.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of C<int>, C<string> given in %s/hphp/test/slow/attributes/atted_syntax/reified_generics.php on line 9
